# Penetration-Mode

./: Penetration-Mode.desktop  README.md  install.sh
Scripts/: check_container.sh  cleanup.sh  run_tool.sh  setup_tools.sh
backend/kontenerator/: Cargo.toml
backend/kontenerator/src/: main.rs
backend/monitor/: Cargo.toml
backend/monitor/src/: main.rs
configs/: profiles.json  settings.json
containers/: ad-attack.Dockerfile  gpu-hashcat.Dockerfile  kali-full.Dockerfile
core/: Cargo.toml
core/src/: Cargo.toml  crypto.rs  gui.rs  main.rs  podman.rs  resources.rs  scheduler.rs  session.rs
gui/: controller.py  main.js  main.py  package.json  styles.qss  tools.json
gui/src/: index.html  preload.js  render.js
python-scripts/: crack.py  network.py  osint.py  scan.py  wifi_crack.py
python-scripts/plugins/: bloodhound.py  gobuster.py  responder.py
