[package]
name = "penmode-core"
version = "0.4.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
chrono = "0.4"
base64 = "0.22"
druid = { version = "0.8", features = ["im"] } # Dla GUI
reqwest = { version = "0.11", features = ["json"] } # Dla żądań HTTP
env_logger = "0.11" # Dla logowania
log = "0.4"
